# yoso_ros2

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
yoso_ros2/: run.py  run.py.bak  run.py.bak.240126  single_run.py
yoso_ros2/demo/: demo.py  predictor.py
yoso_ros2/detectron2/engine/: defaults.py
yoso_ros2/detectron2/model_zoo/: configs
