<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yoso_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kdh4970@gmail.com">do</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
